force-app/main/default/objects/Medicare_Claim__c/Medicare_Claim__c.object-meta.xml
<CustomObject>
    <label>Medicare Claim</label>
    <nameField>
        <label>Medicare Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicare Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>