force-app/main/default/objects/Medicare_Claim__c/fields/Claim_Ready_for_Processing__c.field-meta.xml
<CustomField>
    <fullName>Claim_Ready_for_Processing__c</fullName>
    <formula>AND(CONTAINS(&quot;WFPR,Awaiting Live Birth,Awaiting Clinical Pregnancy,Cycle Closed,Cancelled Cycle&quot;,Cycle__r.Sub_Status_Text_Field__c),	Claim_Finalised__c= FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Ready for Processing</label>
    <type>Checkbox</type>
</CustomField>