force-app/main/default/objects/Medicare_Claim__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Cycle__r.Contact.MailingStreet&amp;&quot; &quot;&amp;Cycle__r.Contact.MailingCity&amp;&quot; &quot;&amp;Cycle__r.Contact.MailingState&amp;&quot; &quot;&amp; Cycle__r.Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>