force-app/main/default/objects/Medicare_Claim__c/fields/Contact_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Birthdate__c</fullName>
    <formula>TEXT(Cycle__r.Contact.Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Birthdate</label>
    <type>Text</type>
</CustomField>