force-app/main/default/objects/Medicare_Claim__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Cycle__r.Contact.Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>