force-app/main/default/objects/Medicare_Claim__c/fields/Contact_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contact_Specialist__c</fullName>
    <formula>Cycle__r.Doctor_Initiating_Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Specialist</label>
    <type>Text</type>
</CustomField>