force-app/main/default/objects/Medicare_Claim__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Medicare Claims</relationshipLabel>
    <relationshipName>Medicare_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>