force-app/main/default/objects/Medicare_Claim__c/fields/Cycle_Id__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Id__c</fullName>
    <formula>Cycle__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Id</label>
    <type>Text</type>
</CustomField>