force-app/main/default/objects/Medicare_Claim__c/fields/Fund_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Account_Code__c</fullName>
    <defaultValue>&apos;MDC&apos;</defaultValue>
    <label>Fund Account Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>