force-app/main/default/objects/Medicare_Claim__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <defaultValue>&apos;medicare&apos;</defaultValue>
    <label>Funder</label>
    <length>20</length>
    <type>Text</type>
</CustomField>