force-app/main/default/objects/Medicare_Claim__c/fields/Medicare_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Claim_Number__c</fullName>
    <displayFormat>MCN - {000000}</displayFormat>
    <label>Medicare Claim Number</label>
    <type>AutoNumber</type>
</CustomField>