force-app/main/default/objects/Medicare_Claim__c/fields/Related_Patient__c.field-meta.xml
<CustomField>
    <fullName>Related_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medicare Claims</relationshipLabel>
    <relationshipName>Medicare_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>