force-app/main/default/objects/Medicare_Claim__c/listViews/allSelection_Medicare_Claim.listView-meta.xml
<ListView>
    <fullName>allSelection_Medicare_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>